GoogleTransitDataFeed transxchange2GoogleTransit

Copyright 2007, 2008, 2009, 2010, 2011, 2012 GoogleTransitDataFeed

This product includes software developed by:
The Apache Software Foundation (http://www.apache.org/)



RELEASE NOTES

--------------------------------------------------------------
v1.7.5:

*** Bugfix: Easting and Northing of route links interfered with correctly carrying over lat/lon data from the NapTAN stops.csv file. 

--------------------------------------------------------------
v1.7.4:

*** Improve robustness of stop file read

*** Bugfix dereferencing service IDs for calendar_dates.txt file

--------------------------------------------------------------
v1.7.3:

*** Carry <Direction> of JourneyPatterns through to direction_in in trips.txt. Mapping
0 - "outbound"
1 - "inbound"

*** Use <Route> <Description> to populate trip_headsign in trips.txt


--------------------------------------------------------------
v1.7.2:

*** Bugfix to handle DaysOfOperation:AllBankHolidays correctly
This addresses issue #288 in http://code.google.com/p/googletransitdatafeed/issues/detail?id=288

*** Added configuration file settings in support of optional columns of agency.txt file
lang=<value>
phone=<value>

--------------------------------------------------------------
v1.7.1:

*** Bugfix for duplicate entries in calendar_dates.txt
This addresses in part issue #284 in http://code.google.com/p/googletransitdatafeed/issues/detail?id=284

--------------------------------------------------------------
v1.7.0:

*** Skip empty services (new configuration file setting)
Services sometimes do not combine to a valid day pattern, and lead to the following types of records in calendar.txt:
<service_id>,0,0,0,0,0,0,0,<start_date>,<end_date>
Services which do not contain a valid day pattern can be skipped by specifying:
skipemptyservice=true
in the configuration file. 